# rankeval

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rankeval/: __init__.py  core.py
src/rankeval.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
